--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.10.0",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
